k8s/prod/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-prod
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: www.domaine.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-prod
                port:
                  number: 80
